<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/nav_bottom"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_pre"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:drawableTop="@mipmap/icon_pre"
            android:gravity="center"
            android:text="@string/menu_topic_pre" />

        <TextView
            android:id="@+id/tv_help"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:drawableTop="@mipmap/icon_help"
            android:gravity="center"
            android:text="@string/menu_topic_explain" />

        <TextView
            android:id="@+id/tv_refresh"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:drawableTop="@mipmap/icon_refresh"
            android:gravity="center"
            android:text="@string/menu_topic_refresh" />

        <TextView
            android:id="@+id/tv_next"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:drawableTop="@mipmap/icon_next"
            android:gravity="center"
            android:text="@string/menu_topic_next" />
    </LinearLayout>

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/nav_bottom">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_question_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:gravity="center"
                android:textColor="@android:color/black"
                android:textSize="18sp"
                android:textStyle="bold"
                tools:text="在没有中心线的道路上发现后车发出超车信号时，如果条件许可如何行驶？" />

            <ImageView
                android:id="@+id/iv_question_file"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:visibility="gone"
                tools:src="@drawable/sample" />

            <RadioGroup
                android:id="@+id/group_answer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <android.support.v7.widget.AppCompatRadioButton
                    android:id="@+id/tv_answer_a"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="15dp"
                    android:paddingRight="15dp"
                    android:paddingTop="5dp"
                    android:paddingBottom="5dp"
                    android:textColor="@color/selector_true"
                    android:textSize="16sp"
                    tools:text="a: 保持原状态行驶"  />

                <android.support.v7.widget.AppCompatRadioButton
                    android:id="@+id/tv_answer_b"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="15dp"
                    android:paddingRight="15dp"
                    android:paddingTop="5dp"
                    android:paddingBottom="5dp"
                    android:textColor="@color/selector_true"
                    android:textSize="16sp"
                    tools:text="a: 保持原状态行驶" />

                <android.support.v7.widget.AppCompatRadioButton
                    android:id="@+id/tv_answer_c"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="15dp"
                    android:paddingRight="15dp"
                    android:paddingTop="5dp"
                    android:paddingBottom="5dp"
                    android:textColor="@color/selector_true"
                    android:textSize="16sp"
                    tools:text="a: 保持原状态行驶" />

                <android.support.v7.widget.AppCompatRadioButton
                    android:id="@+id/tv_answer_d"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="15dp"
                    android:paddingRight="15dp"
                    android:paddingTop="5dp"
                    android:paddingBottom="5dp"
                    android:textColor="@color/selector_true"
                    android:textSize="16sp"
                    tools:text="a: 保持原状态行驶" />
            </RadioGroup>
        </LinearLayout>

    </android.support.v4.widget.NestedScrollView>
</RelativeLayout>